# rovers-ros

./: .gitignore  pyproject.toml
communications/can/: CMakeLists.txt  package.xml
communications/can/launch/: can.launch
communications/can/src/: CAN.py
communications/launch/: communications.launch
communications/src/: CAN.py
communications/xbee/: CMakeLists.txt  package.xml
communications/xbee/launch/: xbee.launch
communications/xbee/src/: xbee.py
constants/launch/: constants.launch
constants/scripts/: can_constants_node.py
hardware/sensors/cameras/launch/: cameras.launch
hardware/sensors/cameras/src/: set_camera_indices.py
hardware/sensors/gps/: CMakeLists.txt  package.xml
hardware/sensors/gps/launch/: gps.launch
hardware/subsystems/drive_base/launch/: drive_base.launch
hardware/subsystems/drive_base/src/: DriveBase.py  MobileRobotKinematics.py
main/: package.xml
main/launch/: main.launch
src/communications/can_comms/: package.xml  setup.cfg  setup.py
src/communications/can_comms/can_comms/: can_comms_node.py
src/communications/xbee/: package.xml  setup.py
src/communications/xbee/xbee/: xbee_node.py
src/constants/: package.xml  setup.cfg  setup.py
src/constants/constants/: CAN_Constants.py  RoverConstants.py  constants.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/src/: custom_interfaces.cpp
src/hardware/sensors/cameras/: package.xml  setup.py
src/hardware/sensors/gps/: package.xml  setup.py
src/main/: package.xml  setup.cfg  setup.py
src/main/main/: main.py
(+8 files in other folders)
