[tool.poetry]
name = "rovers-ros"
version = "0.1.0"
description = ""
authors = ["Garrett Tupper"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-can = "^4.4.2"
opencv-python = "^4.10.0.84"
catkin-pkg = "^1.0.0"
empy = "3.3.4"
lark = "^1.2.2"
serial = "^0.0.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
